# Liga

./: Admin.c  Admin.h  CMakeLists.txt  Cronista.c  Cronista.h  Login_res.h  estructuras.h  load.c  load.h  loader.c  loader.h  login.c  login.h  login_res.c  main.c  participante.c  participante.h
DATA/: Configuracion.txt  Equipos.txt  Futbolistas.txt  Futbolistas_Plantillas.txt  Plantillas.txt  Usuarios.txt  hola
Headers/: Admin.h  participante.h
